--- a/client/views/forbidden.html
+++ b/client/views/forbidden.html
@@ -1,5 +1,1 @@
-<section>
-  <h1>403 Forbidden</h1>
-  <p>Please <a ui-sref="login" ui-sref-active="active">log in</a> to perform
-      this action.</p>
-</section>
+<section> <h1> Opps, Looks Like You Are Not Logged In!! </h1> <p>Please <a ui-sref="login" ui-sref-active="active">log in</a> to perform this action.</p> <p>If you do not have login credientials, <a ui-sref="sign-up" ui-sref-active="active"> sign up </a> now! </p> </section>
