--- a/client/views/my-reviews.html
+++ b/client/views/my-reviews.html
@@ -1,15 +1,1 @@
-<section>
-  <article ng-repeat="r in reviews.slice().reverse()">
-    <header>
-      <h1>{{r.date | date}} | {{r.coffeeShop.name}}</h1>
-      <h2>{{r.reviewer.email}}</h2>
-    </header>
-
-    <p>{{r.rating}}&#9733; - {{r.comments}}</p>
-
-    <div class="actions" ng-show="currentUser">
-      <button ui-sref="edit-review({ id: r.id })">Edit</button>
-      <button a ui-sref="delete-review({ id: r.id })">Delete</button>
-    </div>
-  </article>
-</section>
+<div class="container"> <h1> Results from your tests </h1> <div ng-repeat="x in studentMarks"> <p> {{x.results}} out of {{nonMultipleChoice.length + multipleChoice.length}}</p> </div> </div>
