--- a/client/views/review-form.html
+++ b/client/views/review-form.html
@@ -1,34 +1,1 @@
-<section>
-  <form name="form" ng-submit="submitForm()">
-    <fieldset>
-      <legend>{{action}} review form</legend>
-
-      <div class="form-group">
-        <label>Coffee shop name</label>
-        <select
-            ng-disabled="isDisabled"
-            ng-model="selectedShop"
-            ng-options="shop as shop.name for shop in coffeeShops"></select>
-      </div>
-
-      <div class="form-group">
-        <label>Rating</label>
-        <input type="radio" ng-model="review.rating" value="1">1&#9733;
-        <input type="radio" ng-model="review.rating" value="2">2&#9733;
-        <input type="radio" ng-model="review.rating" value="3">3&#9733;
-        <input type="radio" ng-model="review.rating" value="4">4&#9733;
-        <input type="radio" ng-model="review.rating" value="5">5&#9733;
-      </div>
-
-      <div class="form-group">
-        <label>Comments</label>
-        <textarea ng-model="review.comments"></textarea>
-      </div>
-
-      <div class="actions">
-        <label></label>
-        <button>{{action}} review</button>
-      </div>
-    </fieldset>
-  </form>
-<section>
+<section> <div class="container"> <!--<div class = "row row-content" ng-show = "instruction">  --> <div class="row row-content" ng-show="instruction"> <div class="col-xs-12"> <div class="panel-group"> <div class="panel panel-info"> <div class="panel panel-heading"> Before you start the Mock Examination </div> <div class="panel panel-body"> <p> The exam has two sections : </p> <span> &#10148; <strong> Multiple Choice </strong> section which consists of {{multipleChoice.length}} questions </span><br> <span>&#10148; <strong> Non-Multiple Choice </strong> section which consists of {{nonMultipleChoice.length}} questions </span> <p> To be considered for admission, you must have achieve a result of at least <strong> {{0.7*(nonMultipleChoice.length + multipleChoice.length )}} out of {{nonMultipleChoice.length + multipleChoice.length }} </strong> </p> <p> {{results}} </p> </div> </div> </div> </div> <div class="col-xs-12" style="background-color:#FFFFCC"> <input type="checkbox" name="checkbox" ng-model="terms.agreement"> <span>Tick the box when you are ready to start the test. GOOD LUCK!!</span> <p><button type="button" class="btn btn-primary btn-block" ng-show="terms.agreement" ng-click="startS1()">Start!</button></p> </div> </div> <div class="col-xs-12 col-md-10"> <!--  Section 1 Multiple Choice  --> <!--<div class = "row row-content" ng-show = "MultipleChoice"> --> <div class="row row-content" ng-show="MultipleChoice"> <h1> Section 1 </h1> <div class="col-xs-12"> <div class="panel-group" ng-repeat="x in multipleChoice"> <div class="panel panel-info"> <div class="panel panel-heading"> Question Number {{x.questionNumber}} </div> <div class="panel panel-body"> <h4> {{x.question}} <h4> <label for="question"><input type="radio" ng-model="x.userResponse" value="{{x.a}}"> {{x.a}} </label><br> <label for="question"><input type="radio" ng-model="x.userResponse" value="{{x.b}}"> {{x.b}}</label><br> <label for="question"><input type="radio" ng-model="x.userResponse" value="{{x.c}}"> {{x.c}}</label><br> <label for="question"><input type="radio" ng-model="x.userResponse" value="{{x.d}}"> {{x.d}}</label> </h4></h4></div> </div> </div> <button type="button" class="btn btn-info btn-block" ng-click="startS2()"> Next Section </button> </div> </div> <!-- <div class = "row row-content" ng-show = "youEnter"> --> <div class="row row-content" ng-show="youEnter"> <div class="col-xs-12"> <div class="panel-group" ng-repeat="x in nonMultipleChoice"> <div class="panel panel-info"> <div class="panel panel-heading"> Question Number {{x.questionNumber}} </div> <div class="panel panel-body"> <h4> {{x.question}} <h4> <input type="number" ng-model="x.userResponse"> </h4></h4></div> </div> </div> <button type="button" class="btn btn-info btn-danger btn-block" ng-click="showResults()"> End Test </button> </div> </div> </div> <!-- <div class = "row row-content" ng-show = "evaluations"> --> <div class="row row-content" ng-show="evaluations"> <div class="col-xs-5"> <h4> Section 1 Your Answers </h4> <div ng-repeat="x in multipleChoice"> <p> Question {{x.questionNumber}}: <strong>{{x.question}}</strong> : <span style="font-weight:bold; background-color: yellow">{{x.userResponse}} </span> <span> {{x.evaluation}} </span> </p> </div> </div> <div class="col-xs-5"> <h4> Section 2 Your Answers </h4> <div ng-repeat="x in nonMultipleChoice"> <p> Question {{x.questionNumber}}: <strong>{{x.question}}</strong> : <span style="font-weight:bold; background-color: yellow">{{x.userResponse}} </span> <span> {{x.evaluation}} </span></p> </div> </div> </div> <div ng-show="showScore"> <h4>Your Final Score </h4> <p> You got <spa n="font-weight: bold;">{{countCorrect}} out of {{countCorrect + countIncorrect }}  </spa></p> <p ng-show="passShow"> {{pass}} </p> <p ng-show="failShow"> {{fail}} </p> </div> <button type="button" class="btn btn-info btn-danger btn-block" ng-click="checkAnswer()" ng-show="CheckanswerButton"> Check My Answers </button> </div> <section></section></section>
