--- a/client/views/sign-up-form.html
+++ b/client/views/sign-up-form.html
@@ -1,22 +1,1 @@
-<section>
-  <form name="form" ng-submit="register()">
-    <fieldset>
-      <legend>Sign up form</legend>
-
-      <div class="form-group">
-        <label>Email</label>
-        <input name="email" type="text" ng-model="user.email">
-      </div>
-
-      <div class="form-group">
-        <label>Password</label>
-        <input name="password" type="password" ng-model="user.password">
-      </div>
-
-      <div class="actions">
-        <label></label>
-        <button>Sign up</button>
-      </div>
-    </fieldset>
-  </form>
-</section>
+<div class="container"> <div class="col-xs-12"> <form role="form" name="signup" ng-submit="register()" novalidate> <div class="col-xs-offset-5"> <h3 style="font-weight:bold">Sign Up</h3> </div> <div class="form-group"> <label for="usr">Email:</label> <input type="email" class="form-control" placeholder="Email" name="email" ng-model="user.email" required> </div> <div class="form-group"> <label for="usr">Password:</label> <input type="password" class="form-control" placeholder="Enter Password" name="password" ng-model="user.password" ng-minlength="5" ng-maxlength="15" required> </div> <div class="padding"> <p ng-show="signup.email.$error.required && !signup.email.$pristine" style="color:maroon"> * Your Email Address is Required </p> <p ng-show="signup.email.$invalid && !signup.email.$pristine " style="color:maroon"> You Must Enter A Valid Email Address </p> <p ng-show="signup.password.$error.required && !signup.password.$pristine" style="color:maroon"> * Password is required </p> <p ng-show="signup.password.$error.minlength && !signup.password.$pristine" style="color:maroon"> * Your Password Must be more than 5 Characters </p> <p ng-show="signup.password.$error.maxlength" style="color:maroon"> * Your Password Must be less than 15 Characters </p> </div> <button type="submit" class="btn btn-success btn-block" ng-disabled="signup.$invalid">Sign up</button> </form> </div> </div>
