--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,26 +1,1 @@
-<section>
-  <form name="form" ng-submit="login()">
-    <fieldset>
-      <legend>Login form</legend>
-
-      <div class="form-group">
-        <label>Email</label>
-        <input type="text" ng-model="user.email">
-        <p class="hint" ng-show="form.email.$error.required && submitted">Email is
-            required</p>
-      </div>
-
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" ng-model="user.password">
-        <p class="hint" ng-show="form.password.$error.required && submitted">
-            Password is required</p>
-      </div>
-
-      <div class="actions">
-        <label></label>
-        <button>Login</button>
-      </div>
-    </fieldset>
-  </form>
-<section>
+<div class="container"> <div class="col-xs-12"> <form role="form" name="loginPage" ng-submit="login()" novalidate> <div class="col-xs-offset-5"> <h3 style="font-weight:bold">Login Form</h3> </div> <div class="form-group"> <label for="usr">Email:</label> <input type="email" class="form-control" placeholder="Email" name="email" ng-model="user.email" required> </div> <div class="form-group"> <label for="usr">Password:</label> <input type="password" class="form-control" placeholder="Enter Password" name="password" ng-model="user.password" ng-minlength="5" ng-maxlength="15" required> </div> <button type="submit" class="btn btn-primary btn-block" ng-disabled="loginPage.$invalid"> Login </button> <br> <p><a ui-sref="sign-up"> Or create an account</a></p> </form> </div> </div>
