--- a/client/views/sign-up-success.html
+++ b/client/views/sign-up-success.html
@@ -1,5 +1,1 @@
-<section>
-  <h1>You are now registered.</h1>
-  <p>Please <a ui-sref="login" ui-sref-active="active">log in</a> to perform
-      more actions.</p>
-</section>
+<section> <h1>You are now registered.</h1> <p>Please <a ui-sref="login" ui-sref-active="active">log in</a> to perform more actions.</p> </section>
