Changes to filenames
Changes made to filenames to properly reflect my project. Index.html and
app.js updated accordingly to ensure that navigation works

--- a/client/views/info-exam.html
+++ b/client/views/info-exam.html
@@ -1,1 +1,21 @@
-<div class="container"> <div class="col-xs-12"> <div class="panel-group"> <div class="panel panel-info"> <div class="panel-heading"> Information about Admission </div> <div class="panel-body"> <p> Entry into Dingoes Academy is for students aged between 11-15. Candidates take an Entry Mathematics Exam in July for the September admission. Candidates are not required to bring books, projects or other work with them to interview, but we ask one or both of a candidate’s parents or guardians to attend at this time, in order to meet the Headmaster or the Deputy Head. The Bursar will also interview parents who have applied for bursary support.</p> <p> The exam has two sections : </p> <span> &#10148; <strong> Multiple Choice </strong> section which consists of {{nonMultipleChoice.length}} questions </span><br> <span>&#10148; <strong> Non-Multiple Choice </strong> section which consists of {{multipleChoice.length}} questions </span> <p> To be considered for admission, you must have achieve a result of at least <strong> {{0.7*(nonMultipleChoice.length + multipleChoice.length )}} out of {{nonMultipleChoice.length + multipleChoice.length }} </strong> </p> <a ui-sref="add-review" class="btn btn-success btn-block"> Try the Mock Exam </a> </div> </div> </div> </div> </div>
+<div class="container"> 
+<div class="col-xs-12"> 
+<div class="panel-group"> 
+<div class="panel panel-info"> 
+<div class="panel-heading"> Information about Admissions </div> 
+<div class="panel-body"> 
+<p> Entry into Dingoes Academy is for students aged between 11-15. Candidates take an Entry Mathematics Exam in July for the September admission. Candidates are not required to bring books, projects or other work with them to interview, but we ask one or both of a candidate’s parents or guardians to attend at this time, in order to meet the Headmaster or the Deputy Head. The Bursar will also interview parents who have applied for bursary support.</p> 
+<p> The exam has two sections : </p> 
+<span> &#10148; <strong> Multiple Choice </strong> section which consists of {{nonMultipleChoice.length}} questions </span><br> 
+<span>&#10148; <strong> Non-Multiple Choice </strong> section which consists of {{multipleChoice.length}} questions </span> 
+<p> To be considered for admission, you must have achieve a result of at least
+ <strong> {{0.7*(nonMultipleChoice.length + multipleChoice.length )}} out of {{nonMultipleChoice.length + multipleChoice.length }} </strong>
+ </p> 
+ 
+ 
+ <a ui-sref="add-review" class="btn btn-success btn-block"> Try the Mock Exam </a> 
+ </div> 
+ </div> 
+ </div> 
+ </div> 
+ </div>
